--- a/ga4Events.html
+++ b/ga4Events.html
@@ -1,3 +1,7 @@
+<!-- 
+ Possible timings issues and cannot find all events. 
+ ** DO NOT USE FOR PROD **
+ --->
 <script>
 (function () {
   // --- Event stubs with debug logging ---
